# semver-analyzer

./: AGENTS.md  CHANGELOG.md  CROSS-COMPILATION.md  Cargo.toml  GENERICIZATION_TODOS.md  Makefile  PLAN.md  README.md  STATUS.md
.github/workflows/: container-build.yml
.opencode/: package-lock.json
.opencode/plans/: 05-migration-plan.md  genericization-plan.md
crates/core/: Cargo.toml
crates/core/src/: cli.rs  git.rs  lib.rs  shared.rs  traits.rs
crates/core/src/diff/: compare.rs  helpers.rs  migration.rs  mod.rs  relocate.rs  rename.rs  tests.rs
crates/core/src/types/: bu.rs  change_subject.rs  envelope.rs  mod.rs  report.rs  sd.rs  surface.rs
crates/java/: Cargo.toml
crates/java/src/: cli.rs  konveyor.rs  language.rs  lib.rs  migration_examples.rs  report.rs  sd_pipeline.rs  sd_types.rs  types.rs  worktree.rs
crates/java/src/diff_parser/: mod.rs
crates/java/src/extract/: mod.rs  modifiers.rs
crates/java/src/manifest/: mod.rs  pom.rs
crates/java/src/test_analyzer/: mod.rs
crates/java/tests/snapshots/: baseline_konveyor__konveyor_td_class_renamed.snap
crates/konveyor-core/: Cargo.toml
crates/konveyor-core/src/: lib.rs
crates/konveyor-core/tests/: token_rename_pipeline.rs
crates/llm/: Cargo.toml
crates/llm/src/: invoke.rs  lib.rs  prompts.rs  spec_compare.rs
crates/ts/: Cargo.toml  README.md
crates/ts/src/: cli.rs  extensions.rs  git_utils.rs  hierarchy_types.rs  konveyor.rs  konveyor_frontend.rs  konveyor_v2.rs  language.rs  lib.rs  llm_prompts.rs  report.rs  sd_pipeline.rs  sd_types.rs  symbol_data.rs
crates/ts/src/call_graph/: mod.rs
crates/ts/src/canon/: mod.rs
crates/ts/src/composition/: mod.rs
crates/ts/src/css_profile/: mod.rs
crates/ts/src/css_scan/: mod.rs
crates/ts/src/diff_parser/: mod.rs
crates/ts/src/extract/: mod.rs
crates/ts/src/jsx_diff/: mod.rs
crates/ts/src/manifest/: mod.rs
crates/ts/src/source_profile/: bem.rs  children_slot.rs  clone_element.rs  diff.rs  managed_attrs.rs  mod.rs  prop_defaults.rs  prop_style.rs  react_api.rs
crates/ts/src/test_analyzer/: mod.rs
crates/ts/src/worktree/: error.rs  guard.rs  mod.rs  nvm.rs  package_manager.rs  tsc.rs
crates/ts/tests/: baseline_behavioral.rs  baseline_diff.rs  baseline_manifest.rs  baseline_migration.rs  helpers.rs
crates/ts/tests/snapshots/: baseline_behavioral__baseline_css_class_prefix_changed.snap  baseline_behavioral__baseline_css_multiple_vars_mixed.snap  baseline_behavioral__baseline_css_no_refs_returns_empty.snap  baseline_behavioral__baseline_css_var_removed.snap  baseline_behavioral__baseline_css_var_unchanged.snap  baseline_behavioral__baseline_jsx_aria_attribute_added.snap  baseline_behavioral__baseline_jsx_aria_attribute_removed.snap  baseline_behavioral__baseline_jsx_conditional.snap  baseline_behavioral__baseline_jsx_css_class_removed.snap  baseline_behavioral__baseline_jsx_data_attribute_changed.snap  baseline_behavioral__baseline_jsx_element_added.snap  baseline_behavioral__baseline_jsx_element_removed.snap  baseline_behavioral__baseline_jsx_expression_classname_extracts_string_literals.snap  baseline_behavioral__baseline_jsx_expression_classname_skips_identifiers.snap  baseline_behavioral__baseline_jsx_multiple_categories.snap  baseline_behavioral__baseline_jsx_no_jsx_returns_empty.snap  baseline_behavioral__baseline_jsx_role_changed.snap  baseline_behavioral__baseline_jsx_template_literal_classname.snap  baseline_behavioral__baseline_jsx_wrapper_div_added.snap  baseline_diff__baseline_abstract_added.snap  baseline_diff__baseline_base_class_changed.snap  baseline_diff__baseline_class_method_return_type_changed.snap  baseline_diff__baseline_dedup_default_export_addition.snap  baseline_diff__baseline_dedup_default_export_removal.snap  baseline_diff__baseline_enum_member_added.snap  baseline_diff__baseline_enum_member_removed.snap  baseline_diff__baseline_enum_member_value_changed.snap  baseline_diff__baseline_interface_implementation_added.snap  baseline_diff__baseline_interface_implementation_removed.snap  baseline_diff__baseline_interface_property_added.snap  baseline_diff__baseline_interface_property_removed.snap  baseline_diff__baseline_keep_default_when_different_change_type.snap  baseline_diff__baseline_keep_default_when_no_named_sibling.snap  baseline_diff__baseline_made_async.snap  baseline_diff__baseline_made_sync.snap  baseline_diff__baseline_moved_from_next_to_deprecated.snap  baseline_diff__baseline_moved_to_deprecated.snap  baseline_diff__baseline_moved_to_deprecated_with_member_changes.snap  baseline_diff__baseline_multiple_renames_greedy_matching.snap  baseline_diff__baseline_multiple_symbols_moved_to_deprecated.snap  (+59 more)
design/: 00-overview.md  01-traits.md  02-types.md  03-report-envelope.md  04-language-implementation-guide.md  05-composition-tree-v2.md  rename-detector-verification.md
docs/: konveyor-rules.md  llm-integration.md  patternfly-walkthrough.md  report-format.md  slides.md  structural-migration-detection.md  typescript-guide.md
docs/plans/feat/: per-ref-node-version.concerns.md  per-ref-node-version.md  per-ref-node-version.next-steps.md  per-ref-node-version.progress.md
hack/: run-patternfly.sh
hack/integration/: patternfly-rename-patterns.yaml  patternfly-token-mappings.yaml  run-full-pipeline.sh
hack/java/: .gitignore  README.md  RESULTS.md  run.sh
src/: diagnostics.rs  main.rs  orchestrator.rs  progress.rs
src/cli/: mod.rs
src/konveyor/: mod.rs
