[workspace]
members = ["crates/core", "crates/ts", "crates/llm", "crates/konveyor-core"]
resolver = "2"

[package]
name = "semver-analyzer"
version = "0.1.0"
edition = "2021"
description = "Deterministic semantic breaking change analyzer for TypeScript/JavaScript"

[dependencies]
semver-analyzer-core = { path = "crates/core" }
semver-analyzer-ts = { path = "crates/ts" }
semver-analyzer-llm = { path = "crates/llm" }
semver-analyzer-konveyor-core = { path = "crates/konveyor-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# YAML output (for Konveyor rules)
serde_yaml = "0.9"

# Regex for CSS pattern extraction in konveyor rules
regex = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
