[workspace]
members = ["crates/core", "crates/ts", "crates/llm", "crates/konveyor-core", "crates/java"]
resolver = "2"

[package]
name = "semver-analyzer"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://forge.hurley.page/shawn_hurley/semver-analyzer"
description = "Deterministic semantic breaking change analyzer for TypeScript/JavaScript"

[features]
default = []
java = ["dep:semver-analyzer-java"]

[dependencies]
semver-analyzer-core = { version = "0.0.4", path = "crates/core" }
semver-analyzer-ts = { version = "0.0.4", path = "crates/ts" }
semver-analyzer-java = { version = "0.0.4", path = "crates/java", optional = true }
semver-analyzer-llm = { version = "0.0.4", path = "crates/llm" }
semver-analyzer-konveyor-core = { version = "0.0.4", path = "crates/konveyor-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# YAML output (for Konveyor rules)
serde_yaml = "0.9"

# Regex for CSS pattern extraction in konveyor rules
regex = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Progress reporting
indicatif = "0.17"

# Colored CLI output
owo-colors = "4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

