[package]
name = "semver-analyzer-core"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://forge.hurley.page/shawn_hurley/semver-analyzer"
description = "Core types, traits, and diff engine for the semver-analyzer"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
