[package]
name = "semver-analyzer-java"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://forge.hurley.page/shawn_hurley/semver-analyzer"
description = "Java support for the semver-analyzer"

[dependencies]
semver-analyzer-core = { version = "0.0.3", path = "../core" }
semver-analyzer-konveyor-core = { version = "0.0.3", path = "../konveyor-core" }

# Tree-sitter for Java source parsing
tree-sitter = "0.24"
tree-sitter-java = "0.23"

# XML parsing for pom.xml
quick-xml = { version = "0.37", features = ["serialize"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for build.gradle parsing
regex = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
