[package]
name = "semver-analyzer-konveyor-core"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for Konveyor rule generation"

[dependencies]
semver-analyzer-core = { path = "../core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"

# Regex for pattern building
regex = "1"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
