[package]
name = "semver-analyzer-konveyor-core"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://forge.hurley.page/shawn_hurley/semver-analyzer"
description = "Shared types and utilities for Konveyor rule generation"

[dependencies]
semver-analyzer-core = { version = "0.0.3", path = "../core" }
konveyor-core = { version = "0.0.3", path = "/Users/shurley/repos/ai_harness/konveyor-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"

# Regex for pattern building
regex = "1"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
