[package]
name = "semver-analyzer-ts"
version = "0.1.0"
edition = "2021"
description = "TypeScript/JavaScript support for the semver-analyzer"

[dependencies]
semver-analyzer-core = { path = "../core" }
semver-analyzer-konveyor-core = { path = "../konveyor-core" }

# OXC - JavaScript/TypeScript toolchain
oxc_parser = "0.116"
oxc_ast = "0.116"
oxc_allocator = "0.116"
oxc_span = "0.116"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for test assertion detection and konveyor patterns
regex = "1"

# YAML output (for Konveyor rules)
serde_yaml = "0.9"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
