[package]
name = "semver-analyzer-ts"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://forge.hurley.page/shawn_hurley/semver-analyzer"
description = "TypeScript/JavaScript support for the semver-analyzer"

[dependencies]
semver-analyzer-core = { version = "0.0.5", path = "../core" }
semver-analyzer-konveyor-core = { version = "0.0.5", path = "../konveyor-core" }

# OXC - JavaScript/TypeScript toolchain
oxc_parser = "0.116"
oxc_ast = "0.116"
oxc_allocator = "0.116"
oxc_span = "0.116"
oxc_resolver = "11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for test assertion detection and konveyor patterns
regex = "1"

# YAML output (for Konveyor rules)
serde_yaml = "0.9"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# CSS parsing (for dependency repo CSS analysis)
lightningcss = "1.0.0-alpha.71"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
serial_test = "3.4.0"
